[package]
name = "rqst"
version = "0.1.0"
edition = "2021"
description = "Rust-based HTTP client for the terminal."
authors = ["borisdvlpr <eduffmiranda@hotmail.com>"]
license = "MIT"
homepage = "https://github.com/borisdvlpr/rqst"
repository = "https://github.com/borisdvlpr/rqst"
readme = "README.md"
keywords = ["cli-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
reqwest = "0.11.24"
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.13"
httpmock = "0.7.0"
predicates = "3.1.0"
